--- a/JQM_CodeMash/index.html
+++ b/JQM_CodeMash/index.html
@@ -9,21 +9,43 @@
 		<script src="cordova.js" type="text/javascript"></script>
 		<script src="jquery-mobile/jquery-1.7.1.min.js" type="text/javascript"></script>
 		<script src="jquery-mobile/jquery.mobile-1.1.1.min.js" type="text/javascript"></script>
+        <script src="js/date.format.js" type="text/javascript"></script>
 		<script src="js/codemash.js" type="text/javascript"></script>
 	</head>
 	<body>
 
 		<div data-role="page" id="home">
-			<div data-role="header" class='clearfix'>
-				<div class="ui-block-a" style="width: 40%">
-					<label for="search-basic" class="ui-hidden-accessible">Search Input</label>
-					<input type="search" name="search" id="sessionsSearch" placeholder="Filter Sessions" />
-				</div>
-				<div class="ui-block-b" style="width: 40%">
-				</div>
-				<div class="ui-block-c" style="width: 20%">
-					<a href="#calendarPage" data-role="button" data-icon="calendar" data-iconpos="notext">Calendar</a>
-					<a href="#settingsPage" data-role="button" data-icon="gear" data-iconpos="notext">Settings</a>
+			<div data-role="header" >
+				<div class="ui-grid-b">
+					<div class="ui-block-a" style='width: 40%'>
+						<label for="search-basic" class="ui-hidden-accessible">Search Input</label>
+						<input type="search" name="search" id="sessionsSearch" placeholder="Filter Sessions" data-mini="true"/>
+					</div>
+					<div class="ui-block-b" style='width: 50%'></div>
+					<div class="ui-block-c" style='width: 10%'>
+						<ul data-role="menu" id="optionsDropDown">
+							<li>
+								<span data-role="button" data-icon="arrow-d" data-iconpos="left">Menu</span>
+								<ul data-role="listview" data-inset="true">
+									<li data-icon="false">
+										<a href="#" id="thursdayFilter">Thursday</a>
+									</li>
+									<li data-icon="false">
+										<a href="#" id="fridayFilter">Friday</a>
+									</li>
+                                    <li data-icon="false">
+                                        <a href="#" id="listAllSessions">List All Sessions</a>
+                                    </li>
+									<li data-icon="calendar">
+										<a href="#calendarPage" >Calendar</a>
+									</li>
+									<li data-icon="gear">
+										<a href="#settingsPage" >Settings</a>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 
@@ -100,7 +122,7 @@
 				<h1 id="title">Calendar</h1>
 			</div>
 			<div class="ui-grid-a" data-role="content">
-                <div class="ui-block-a" style="width: 25%">
+				<div class="ui-block-a" style="width: 25%">
 					<ul data-role="listview" data-theme="a" style='margin-right: 6px;'>
 						<li data-icon="false">
 							<a href="" id="buttonDay_1">Day 1</a>
@@ -119,24 +141,24 @@
 						<p>Empty calendar.</p>
 					</div>
 				</div>
-                <div class="ui-block-b" id="calendarContainer" style="width: 75%" >
+				<div class="ui-block-b" id="calendarContainer" style="width: 75%" >
 					<div id="containerDay_1" class="calendarDay" style="display: none;">
-                        <div class="calendarDayHeading">Day One</div>
+						<div class="calendarDayHeading">Day One</div>
 						<div id="calendarPage_dayOne"></div>
 					</div>
 					<div id="containerDay_2" class="calendarDay" style="display: none;">
-                        <div class="calendarDayHeading">Day Two</div>
+						<div class="calendarDayHeading">Day Two</div>
 						<div id="calendarPage_dayTwo"></div>
 					</div>
 					<div id="containerDay_3" class="calendarDay" style="display: none;">
-                        <div class="calendarDayHeading">Day Three</div>
+						<div class="calendarDayHeading">Day Three</div>
 						<div id="calendarPage_dayThree"></div>
 					</div>
 					<div id="containerDay_4" class="calendarDay" style="display: none;">
-                        <div class="calendarDayHeading">Day Four</div>
+						<div class="calendarDayHeading">Day Four</div>
 						<div id="calendarPage_dayFour"></div>
 					</div>
-				</div>				
+				</div>
 			</div>
 
 		</div>
